--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -404,6 +404,21 @@
                     },
                     "type": "array"
                   },
+                  "labelLimit": {
+                    "description": "Per-scrape limit on number of labels that will be accepted for a sample. Only valid in Prometheus versions 2.27.0 and newer.",
+                    "format": "int64",
+                    "type": "integer"
+                  },
+                  "labelNameLengthLimit": {
+                    "description": "Per-scrape limit on length of labels name that will be accepted for a sample. Only valid in Prometheus versions 2.27.0 and newer.",
+                    "format": "int64",
+                    "type": "integer"
+                  },
+                  "labelValueLengthLimit": {
+                    "description": "Per-scrape limit on length of labels value that will be accepted for a sample. Only valid in Prometheus versions 2.27.0 and newer.",
+                    "format": "int64",
+                    "type": "integer"
+                  },
                   "metricsPath": {
                     "description": "MetricsPath HTTP path to scrape for metrics. If empty, Prometheus uses the default value (e.g. /metrics).",
                     "type": "string"
@@ -477,6 +492,11 @@
                     },
                     "type": "array"
                   },
+                  "sampleLimit": {
+                    "description": "SampleLimit defines per-scrape limit on number of scraped samples that will be accepted.",
+                    "format": "int64",
+                    "type": "integer"
+                  },
                   "scheme": {
                     "description": "Configures the protocol scheme used for requests. If empty, Prometheus uses HTTP by default.",
                     "enum": [
@@ -510,6 +530,11 @@
                       "type": "object"
                     },
                     "type": "array"
+                  },
+                  "targetLimit": {
+                    "description": "TargetLimit defines a limit on the number of scraped targets that will be accepted.",
+                    "format": "int64",
+                    "type": "integer"
                   },
                   "tlsConfig": {
                     "description": "TLS configuration to use on every scrape request",
