update generated content
Signed-off-by: Simon Pasquier <spasquie@redhat.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -585,12 +585,16 @@ spec:
                                 type: object
                             type: object
                           message:
+                            description: The template of the message's body.
                             type: string
                           sendResolved:
                             description: Whether or not to notify about resolved alerts.
                             type: boolean
                           title:
+                            description: The template of the message's title.
                             type: string
+                        required:
+                        - apiURL
                         type: object
                       type: array
                     emailConfigs:
