--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -613,6 +613,7 @@
                                 "type": "object"
                               },
                               "message": {
+                                "description": "The template of the message's body.",
                                 "type": "string"
                               },
                               "sendResolved": {
@@ -620,9 +621,13 @@
                                 "type": "boolean"
                               },
                               "title": {
+                                "description": "The template of the message's title.",
                                 "type": "string"
                               }
                             },
+                            "required": [
+                              "apiURL"
+                            ],
                             "type": "object"
                           },
                           "type": "array"
