--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -585,12 +585,16 @@ spec:
                                 type: object
                             type: object
                           message:
+                            description: The template of the message's body.
                             type: string
                           sendResolved:
                             description: Whether or not to notify about resolved alerts.
                             type: boolean
                           title:
+                            description: The template of the message's title.
                             type: string
+                        required:
+                        - apiURL
                         type: object
                       type: array
                     emailConfigs:
