--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -129,10 +129,10 @@
                   "consulSDConfigs": {
                     "description": "ConsulSDConfigs defines a list of Consul service discovery configurations.",
                     "items": {
-                      "description": "HTTPSDConfig defines a prometheus HTTP service discovery configuration See https://prometheus.io/docs/prometheus/latest/configuration/configuration/#consul_sd_config",
+                      "description": "ConsulSDConfig defines a Consul service discovery configuration See https://prometheus.io/docs/prometheus/latest/configuration/configuration/#consul_sd_config",
                       "properties": {
                         "allow_stale": {
-                          "description": "Allow stale Consul results (see https://www.consul.io/api/features/consistency.html). Will reduce load on Consul. default true",
+                          "description": "Allow stale Consul results (see https://www.consul.io/api/features/consistency.html). Will reduce load on Consul. If unset, Prometheus uses its default value.",
                           "type": "boolean"
                         },
                         "authorization": {
@@ -222,11 +222,11 @@
                           "type": "string"
                         },
                         "enable_http2": {
-                          "description": "Whether to enable HTTP2. default true",
+                          "description": "Whether to enable HTTP2. If unset, Prometheus uses its default value.",
                           "type": "boolean"
                         },
                         "follow_redirects": {
-                          "description": "Configure whether HTTP requests follow HTTP 3xx redirects. default true",
+                          "description": "Configure whether HTTP requests follow HTTP 3xx redirects. If unset, Prometheus uses its default value.",
                           "type": "boolean"
                         },
                         "namespace": {
@@ -242,7 +242,8 @@
                             "type": "string"
                           },
                           "description": "Node metadata key/value pairs to filter nodes for a given service.",
-                          "type": "object"
+                          "type": "object",
+                          "x-kubernetes-map-type": "atomic"
                         },
                         "oauth2": {
                           "description": "Optional OAuth 2.0 configuration.",
@@ -376,7 +377,7 @@
                           "type": "object"
                         },
                         "proxy_from_environment": {
-                          "description": "Use proxy URL indicated by environment variables (HTTP_PROXY, https_proxy, HTTPs_PROXY, https_proxy, and no_proxy) default false",
+                          "description": "Use proxy URL indicated by environment variables (HTTP_PROXY, https_proxy, HTTPs_PROXY, https_proxy, and no_proxy) If unset, Prometheus uses its default value.",
                           "type": "boolean"
                         },
                         "proxy_url": {
@@ -384,12 +385,16 @@
                           "type": "string"
                         },
                         "refresh_interval": {
-                          "description": "The time after which the provided names are refreshed. On large setup it might be a good idea to increase this value because the catalog will change all the time. default \"30s\"",
+                          "description": "The time after which the provided names are refreshed. On large setup it might be a good idea to increase this value because the catalog will change all the time. If unset, Prometheus uses its default value.",
                           "pattern": "^(0|(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?)$",
                           "type": "string"
                         },
                         "scheme": {
                           "description": "HTTP Scheme default \"http\"",
+                          "enum": [
+                            "http",
+                            "https"
+                          ],
                           "type": "string"
                         },
                         "server": {
@@ -402,10 +407,11 @@
                           "items": {
                             "type": "string"
                           },
-                          "type": "array"
+                          "type": "array",
+                          "x-kubernetes-list-type": "atomic"
                         },
                         "tag_separator": {
-                          "description": "The string by which Consul tags are joined into the tag label. default \",\"",
+                          "description": "The string by which Consul tags are joined into the tag label. If unset, Prometheus uses its default value.",
                           "type": "string"
                         },
                         "tags": {
@@ -413,7 +419,8 @@
                           "items": {
                             "type": "string"
                           },
-                          "type": "array"
+                          "type": "array",
+                          "x-kubernetes-list-type": "atomic"
                         },
                         "tlsConfig": {
                           "description": "TLS Config",
@@ -551,8 +558,8 @@
                           },
                           "type": "object"
                         },
-                        "token": {
-                          "description": "Consul ACL Token, If not provided it will use the ACL from the local Consul Agent.",
+                        "tokenRef": {
+                          "description": "Consul ACL TokenRef, If not provided it will use the ACL from the local Consul Agent.",
                           "properties": {
                             "key": {
                               "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -573,6 +580,9 @@
                           "type": "object"
                         }
                       },
+                      "required": [
+                        "server"
+                      ],
                       "type": "object"
                     },
                     "type": "array"
