--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -218,7 +218,7 @@
                           "type": "object"
                         },
                         "datacenter": {
-                          "description": "Consul Datacenter name, If not provided it will use the local Consul Agent Datacenter.",
+                          "description": "Consul Datacenter name, if not provided it will use the local Consul Agent Datacenter.",
                           "type": "string"
                         },
                         "enable_http2": {
@@ -560,7 +560,7 @@
                           "type": "object"
                         },
                         "tokenRef": {
-                          "description": "Consul ACL TokenRef, If not provided it will use the ACL from the local Consul Agent.",
+                          "description": "Consul ACL TokenRef, if not provided it will use the ACL from the local Consul Agent.",
                           "properties": {
                             "key": {
                               "description": "The key of the secret to select from.  Must be a valid secret key.",
