Synchronize v1beta1 types with v1alpha1
Signed-off-by: Simon Pasquier <spasquie@redhat.com>

--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -8697,6 +8697,7 @@ spec:
                           roomID:
                             description: ID of the Webex Teams room where to send
                               the messages.
+                            minLength: 1
                             type: string
                           sendResolved:
                             description: Whether to notify about resolved alerts.
