--- a/bundle.yaml
+++ b/bundle.yaml
@@ -17998,7 +17998,7 @@ spec:
                       type: string
                     follow_redirects:
                       description: Configure whether HTTP requests follow HTTP 3xx
-                        redirects.
+                        redirects. Optional
                       type: boolean
                     headers:
                       additionalProperties:
@@ -27066,7 +27066,7 @@ spec:
                       type: string
                     follow_redirects:
                       description: Configure whether HTTP requests follow HTTP 3xx
-                        redirects.
+                        redirects. Optional
                       type: boolean
                     headers:
                       additionalProperties:
@@ -37026,7 +37026,7 @@ spec:
                       type: string
                     follow_redirects:
                       description: Configure whether HTTP requests follow HTTP 3xx
-                        redirects.
+                        redirects. Optional
                       type: boolean
                     headers:
                       additionalProperties:
