--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -998,6 +998,16 @@
                     ],
                     "type": "string"
                   },
+                  "scrapeInterval": {
+                    "description": "ScrapeInterval is the interval between consecutive scrapes.",
+                    "pattern": "^(0|(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?)$",
+                    "type": "string"
+                  },
+                  "scrapeTimeout": {
+                    "description": "ScrapeTimeout is the number of seconds to wait until a scrape request times out.",
+                    "pattern": "^(0|(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?)$",
+                    "type": "string"
+                  },
                   "staticConfigs": {
                     "description": "StaticConfigs defines a list of static targets with a common label set.",
                     "items": {
