--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
@@ -4365,8 +4365,8 @@ spec:
                         Prefer using `authorization`.*"
                       type: string
                     follow_redirects:
-                      description: Configure whether HTTP requests follow HTTP 3xx
-                        redirects. Optional
+                      description: FollowRedirects configures whether HTTP requests
+                        follow HTTP 3xx redirects. Optional
                       type: boolean
                     headers:
                       additionalProperties:
