--- a/.github/workflows/automerge-dependabot.yaml
+++ b/.github/workflows/automerge-dependabot.yaml
@@ -15,6 +15,13 @@ jobs:
         uses: dependabot/fetch-metadata@v1
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Generate Documentation/compatibility.md
+        if: contains(steps.metadata.outputs.dependency-names, 'k8s.io/api')
+        run: |
+          make generate --always-make
+          git add Documentation/compatibility.md
+          git commit -m "Generate Documentation/compatibility.md"
+          git push
       - name: Enable auto-merge for Dependabot PRs
         if: ${{steps.metadata.outputs.update-type == 'version-update:semver-minor' || steps.metadata.outputs.update-type == 'version-update:semver-patch'}}
         run: gh pr merge --auto --merge "$PR_URL"
