--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -833,11 +833,10 @@ spec:
                       description: List of MSTeams configurations.
                       items:
                         description: MSTeamsConfig configures notifications via MS
-                          Teams.
+                          Teams. See https://prometheus.io/docs/alerting/latest/configuration/#msteams_config
                         properties:
                           httpConfig:
-                            description: HTTPConfig defines a client HTTP configuration.
-                              See https://prometheus.io/docs/alerting/latest/configuration/#http_config
+                            description: HTTP client configuration.
                             properties:
                               authorization:
                                 description: Authorization header configuration for
@@ -1184,12 +1183,15 @@ spec:
                                 type: object
                             type: object
                           sendResolved:
+                            description: Whether to notify about resolved alerts.
                             type: boolean
                           text:
                             type: string
                           title:
                             type: string
                           webhookUrl:
+                            description: MSTeams webhook url
+                            pattern: ^http(s)?://.+$
                             type: string
                         required:
                         - webhookUrl
