--- a/.github/workflows/automerge-dependabot.yaml
+++ b/.github/workflows/automerge-dependabot.yaml
@@ -25,8 +25,10 @@ jobs:
         run: |
           make generate --always-make
           if ! git diff --exit-code; then
+            git config --global user.email "support@github.com"
+            git config --global user.name "dependabot[bot]"
             git add Documentation/compatibility.md
-            git commit -m "Generate Documentation/compatibility.md"
+            git commit -s -m "Generate Documentation/compatibility.md"
             git push
           fi
       - name: Enable auto-merge for Dependabot PRs
