feat: Add Slack APIURLFile to AlertManagerConfig
Fixes #5077

Signed-off-by: Jayapriya Pai <slashpai9@gmail.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -2299,6 +2299,10 @@ spec:
                             required:
                             - key
                             type: object
+                          apiURLFile:
+                            description: File path on the disk containing the Slack's
+                              webhook URL
+                            type: string
                           callbackId:
                             type: string
                           channel:
