--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -2312,6 +2312,10 @@ spec:
                             - key
                             type: object
                             x-kubernetes-map-type: atomic
+                          apiURLFile:
+                            description: File path on the disk containing the Slack's
+                              webhook URL
+                            type: string
                           callbackId:
                             type: string
                           channel:
@@ -7438,6 +7442,10 @@ spec:
                             - key
                             - name
                             type: object
+                          apiURLFile:
+                            description: File path on the disk containing the Slack's
+                              webhook URL
+                            type: string
                           callbackId:
                             type: string
                           channel:
