--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -2299,6 +2299,10 @@ spec:
                             required:
                             - key
                             type: object
+                          apiURLFile:
+                            description: File path on the disk containing the Slack's
+                              webhook URL
+                            type: string
                           callbackId:
                             type: string
                           channel:
