--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -2415,6 +2415,10 @@
                                 ],
                                 "type": "object"
                               },
+                              "apiURLFile": {
+                                "description": "File path on the disk containing the Slack's webhook URL",
+                                "type": "string"
+                              },
                               "callbackId": {
                                 "type": "string"
                               },
