--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -2204,6 +2204,13 @@ spec:
                             - key
                             type: object
                             x-kubernetes-map-type: atomic
+                          tokenFile:
+                            description: The token file that contains the registered
+                              application's API token, see https://pushover.net/apps.
+                              The token file needs to be in the same namespace as
+                              the AlertmanagerConfig object and accessible by the
+                              Prometheus Operator.
+                            type: string
                           url:
                             description: A supplementary URL shown alongside the message.
                             type: string
@@ -2234,6 +2241,12 @@ spec:
                             - key
                             type: object
                             x-kubernetes-map-type: atomic
+                          userKeyFile:
+                            description: The user key file that contains the recipient
+                              user's user key. The user key file needs to be in the
+                              same namespace as the AlertmanagerConfig object and
+                              accessible by the Prometheus Operator.
+                            type: string
                         type: object
                       type: array
                     slackConfigs:
@@ -7336,6 +7349,13 @@ spec:
                             - key
                             - name
                             type: object
+                          tokenFile:
+                            description: The token file that contains the registered
+                              application's API token, see https://pushover.net/apps.
+                              The token file needs to be in the same namespace as
+                              the AlertmanagerConfig object and accessible by the
+                              Prometheus Operator.
+                            type: string
                           url:
                             description: A supplementary URL shown alongside the message.
                             type: string
@@ -7363,6 +7383,12 @@ spec:
                             - key
                             - name
                             type: object
+                          userKeyFile:
+                            description: The user key file that contains the recipient
+                              user's user key. The user key file needs to be in the
+                              same namespace as the AlertmanagerConfig object and
+                              accessible by the Prometheus Operator.
+                            type: string
                         type: object
                       type: array
                     slackConfigs:
